--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ My Personal website
 # Your information
 email: muhamood.khalid@aims.ac.rw
 author:KHALID Muhamood
-avatar: "//www.gravatar.com/avatar/your_email_md5?d=mm&s=135"
+avatar: "https://github.com/khalidhmsh/khalidhkmsh.github.io/blob/gh-pages/115735736%20(1).png?raw=true"
 profile: Am a Physics and Mathematics Student.
 #twitter_username: twitter_username
 #github_username:  github_username
